--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div id = "discription">
-      <img src = "五月祭ポスター藤井研_page-0001.jpg">
+      <!-- <img src = "五月祭ポスター藤井研_page-0001.jpg"> -->
     </div>
     <script>
       var container = document.querySelector("#unity-container");
